@@ -54,6 +54,13 @@ Release 2.7.1 - UNRELEASED
     correct user. (Zhijie Shen via jianhe)
 
     YARN-3351. AppMaster tracking URL is broken in HA. (Anubhav Dhoot via kasha)
+=======
+    YARN-3197. Confusing log generated by CapacityScheduler. (Varun Saxena 
+    via devaraj)
+
+    YARN-3305. Normalize AM resource request on app submission. (Rohith Sharmaks
+    via jianhe)
+>>>>>>> ab34e69... YARN-3305. Normalize AM resource request on app submission. Contributed by Rohith Sharmaks
 
     YARN-3382. Some of UserMetricsInfo metrics are incorrectly set to root
     queue metrics. (Rohit Agarwal via jianhe)
